// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Array argument 1`] = `
Array [
  Object {
    "-1": -1,
    "0": 0,
    "1": 1,
    "city": "Kapotnya",
    "date": 1970-01-01T00:00:02.001Z,
    "email": "snelson0@yellowbook.com",
    "first_name": "Stephen",
    "gender": "Male",
    "id": 1,
    "ip_address": "74.191.108.58",
    "last_name": "Nelson",
    "phrase": "Universal 6th generation portal",
  },
]
`;

exports[`Map 1`] = `
Object {
  "a": "0",
  "y": "0",
}
`;

exports[`Object argument 1`] = `
Object {
  "-1": -1,
  "0": 0,
  "1": 1,
  "city": "Kapotnya",
  "date": 1970-01-01T00:00:02.001Z,
  "email": "snelson0@yellowbook.com",
  "first_name": "Stephen",
  "gender": "Male",
  "id": 1,
  "ip_address": "74.191.108.58",
  "last_name": "Nelson",
  "phrase": "Universal 6th generation portal",
}
`;

exports[`Set with Map 1`] = `
Array [
  Object {
    "x": "0",
    "y": "0",
  },
  Object {
    "x": "1",
    "y": "1",
  },
  Object {
    "y": "2",
  },
  Object {
    "x": "3",
  },
  Object {
    "x": "4",
    "y": "4",
  },
]
`;
